1999-10-02  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/style.c (ProcessNewStyle): fixed multiple icon boxes broken with
	latest style changes

	* fvwm/builtins.c (ReadDecorFace): use new signature of ParseGradient
	fixed ...style flags after gradient specs

	* fvwm/menus.c (ReadMenuFace): use new signature of ParseGradient

	* libs/Graphics.c (ParseGradient): function returns rest of line

	* fvwm/builtins.c (SetTitleStyle):
	(ReadTitleButton):
	(SetMWMButtonFlag):
	(ButtonStyle):
	(FreeDecorFace):
	(ReadDecorFace):
	* fvwm/borders.c (DrawButton):
	(RedrawBorder):
	(SetBorderStyle):
	* fvwm/add_window.c (AddWindow):
	* fvwm/decorations.c (SelectDecor):
	* fvwm/builtins.c (SetTitleStyle):
	* fvwm/screen.h (DecorFace):
	GSFR for TitleStyle, BorderStyle, ButtonStyle
	general flag cleanup and several bugfixes
	removed code that was never called

1999-10-01  Dominik Vogt  <dominik_vogt@gmx.de>

	* libs/Colorset.c (DumpColorset):
	(LoadColorsetConditional):
	coredump fix - must send out 'mask' and 'color_flags' to the modules in
	case a second FvwmTheme is running

	* libs/Colorset.c (LoadColorset): free hilite/shadow if changed
	(LoadColorset): coredump fix

	* fvwm/move_resize.c (resize_window): send config to pager during
	opaque resize

	* fvwm/builtins.c (HandleColorset): fixed coredump

	* fvwm/style.c: (merge_styles):
	fixed several bugs in style preference (with 'Style * Icon ...' before
	'Style xterm NoIcon', the 'Icon' style would have won.)

	* fvwm/style.c: (ProcessDestroyStyle):
	(remove_all_of_style_from_list):
	(add_style_to_list):
	adjacent styles in the style list with the same name are merged

	* fvwm/style.c (merge_styles): can merge styles without leaking memory
	or causing coredumps with 'destroy_style'.

	* fvwm/style.c (free_icon_boxes): new function
	(merge_styles): now static
	(copy_icon_boxes): new function
	(free_style): new function
	(merge_style_list): new function

1999-09-30  Dominik Vogt  <dominik_vogt@gmx.de>
